# M-CORE_IDA-Pro

./: CMakeLists.txt  ReadMe.md  Readme.txt  ana.cpp  emu.cpp  ins.cpp  ins.hpp  mcore.hpp  out.cpp  reg.cpp
compat-8.3/: CMakeLists.txt  out.cpp
linux_opmap_parsing/: gennodes.py  mcore-optab  op2.cpp  opdecode.cpp
no-rsa/: ReadMe.md  tal_start.c  tal_start.ld
test/: switch.test
